fix bug of wong shift

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 td {
   text-align: left;
+  vertical-align: top;
 }
 
 .custom-checkbox {
